--- a/SHELTER/styles/components/_cards.scss
+++ b/SHELTER/styles/components/_cards.scss
@@ -17,6 +17,10 @@
     }
   }
 
+  >.btn {
+    margin-top: 1px;
+  }
+
   &__img {
     border-radius: 9px 9px 0 0;
   }
