--- a/SHELTER/styles/layouts/_footer.scss
+++ b/SHELTER/styles/layouts/_footer.scss
@@ -16,12 +16,11 @@
 
   a {
     position: relative;
-    padding-left: 60px;
+
   }
 
   &__adr {
     padding-left: 40px;
-
 
     &::before {
       content: url(/SHELTER/assets/icons/icon-marker.svg);
@@ -36,6 +35,7 @@
   }
 
   &__mail {
+    padding-left: 60px;
 
     &::before {
       content: url(/SHELTER/assets/icons/icon-email.svg);
@@ -49,6 +49,7 @@
   }
 
   &__tel {
+    padding-left: 60px;
 
     &::before {
       content: url(/SHELTER/assets/icons/icon-phone.svg);
@@ -72,6 +73,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
     h4:hover {
       color: $color-primary-light;
     }
